Fix square spacing

--- a/src/containers/PlayArea/Board/Board.css
+++ b/src/containers/PlayArea/Board/Board.css
@@ -11,4 +11,6 @@
    justify-items: center;
    align-items: center;
    background-color: sienna;
+   border: 10px solid brown;
+   border-radius: 10px;
 }
